# kreacher-bot

./: .env.example  .gitignore  .gitmodules  .gitpod.yml  .pylintrc  .run.sh  .vm.sh  .webdriver.sh  Dockerfile  INTRO.ipynb  LICENSE  Makefile  Procfile  README.md  cfg_gen.pl  docker-compose.yml  go.mod  go1.21.5.linux-arm64.tar.gz.1  go1.21.5.linux-arm64.tar.gz.2  install.sh  kreacher.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  runtime.txt  setenv.sh  setup.sh  start.sh  webdriver.sh
.codesandbox/: Dockerfile  tasks.json
.devcontainer/: devcontainer.json
bot/: .env.example  __init__.py  __main__.py  config.py  setup.py  start.sh  status.py  util.py  utils.py
bot/callbacks/: callbacks.py  misc.py  streams.py
bot/commands/: actives.py  config.py  join.py  leave.py  play_book.py  play_song.py  play_video.py  speedtest.py  streaming.py
bot/db/: tables.py
bot/decorators/: cmdp.py  only_admins.py  only_admins_or_requester.py  only_dev.py  only_grps_chnns.py  only_managers.py  sides.py
bot/handler/: handler.py
bot/helpers/: GoogleImageScraper.py  absvr.py  bash.py  db.py  find_movie.py  handler.py  invoices.py  linked.py  main.py  mention.py  piper.py  pkl.py  player_image.py  (+9 more)
container/: container.md
kreacher/: client.go  clients.go  cmds.go  commands.go  config.go  constants.go  go.mod  logger.go  main.go  types.go  vars.go
logs/: logs.md
scripts/: setup.sh
session/: .gitignore  session.md  session.py
temp/: temp.md
tlg_bot/: .env.example  .gitignore  __init__.py  __main__.py  app.json  config.py  main.py  start.sh  utils.py
(+155 files in other folders)
